Configured publishing to Sonatype